# 3D-Simulator

./: .env.example  .gitignore  README.md  api_server.py  config.py  index.html  main.py  modification.txt  pyproject.toml  simulation_processor.py
api/: local_api.py  s3_api.py
etc/: analyze_parquet.py  etc.txt  visualize_wheelchair_data.py
services/: s3_service.py  simulation_processor.py
static/: main.js  style.css
static/js/: api.js  simulation.js  ui.js
tests/: test_simulation_processor.py
